# FinanceAI

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 26a6358cc7a4_initial_tables.py
backend/core/: config.py  database.py  security.py
backend/models/: __init__.py  account.py  category.py  transaction.py  user.py
scripts/: seed_categories.py
tests/: conftest.py  test_seed.py
